@@ -1,36 +1,67 @@
 package com.udacity.vehicles.api;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
+import org.springframework.http.ProblemDetail;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 /**
- * Implements the Error controller related to any errors handled by the Vehicles API
+ * Refactored to return RFC 7807 ProblemDetail responses instead of
+ * the custom {@link ApiError} DTO.  {@code spring.mvc.problemdetails.enabled=true}
+ * handles standard Spring exceptions; this handler adds validation-error
+ * detail and a catch-all for unexpected exceptions.
  */
 @ControllerAdvice
 public class ErrorController extends ResponseEntityExceptionHandler {
 
-    private static final String DEFAULT_VALIDATION_FAILED_MESSAGE = "Validation failed";
+    private static final Logger LOGGER = LoggerFactory.getLogger(ErrorController.class);
 
+    @Override
     protected ResponseEntity<Object> handleMethodArgumentNotValid(
             MethodArgumentNotValidException ex,
-            HttpHeaders headers, HttpStatus status,
+            HttpHeaders headers,
+            HttpStatusCode status,
             WebRequest request) {
+
         List<String> errors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
-                .map(error -> error.getField() + ": " + error.getDefaultMessage()).collect(
-                        Collectors.toList());
+                .map(error -> error.getField() + ": " + error.getDefaultMessage())
+                .toList();
 
-        ApiError apiError = new ApiError(DEFAULT_VALIDATION_FAILED_MESSAGE, errors);
-        return handleExceptionInternal(ex, apiError, headers, HttpStatus.BAD_REQUEST, request);
+        ProblemDetail pd = ProblemDetail.forStatus(HttpStatus.BAD_REQUEST);
+        pd.setTitle("Validation Failed");
+        pd.setProperty("errors", errors);
+
+        return handleExceptionInternal(ex, pd, headers, status, request);
+    }
+
+    @ExceptionHandler(com.udacity.vehicles.service.CarNotFoundException.class)
+    public ProblemDetail handleCarNotFound(com.udacity.vehicles.service.CarNotFoundException ex) {
+        ProblemDetail pd = ProblemDetail.forStatusAndDetail(
+                HttpStatus.NOT_FOUND,
+                ex.getMessage());
+        pd.setTitle("Car Not Found");
+        return pd;
+    }
+
+    @ExceptionHandler(Exception.class)
+    public ProblemDetail handleUnexpected(Exception ex) {
+        LOGGER.error("Unhandled exception", ex);
+        ProblemDetail pd = ProblemDetail.forStatusAndDetail(
+                HttpStatus.INTERNAL_SERVER_ERROR,
+                "An unexpected error occurred");
+        pd.setTitle("Internal Server Error");
+        return pd;
     }
 }
-
